[package]
name = "telegram-api-rs"
version = "0.0.1"
authors = ["jrmbchtl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
jobs = 8


[dependencies]
reqwest =  { version = "0.11.2", features = ["blocking"] }
json = "0.12.4"
rustc-serialize = "0.3"
