[package]
name = "telegram-api-rs"
version = "0.0.4"
authors = ["jrmbchtl"]
edition = "2018"
description = "Telegram API written in RUST"
readme = "README.md"
repository = "https://github.com/jrmbchtl/telegram-bot-rs"
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
jobs = 8


[dependencies]
reqwest =  { version = "0.11.2", features = ["blocking"] }
json = "0.12.4"
urlencoding = "1.3.3"
rustc-serialize = "0.3"
